fluxui/include/fluxui/fluxui_c.h

typedef struct FluxUIWidget FluxUIWidget;
typedef struct FluxUIColor {
    float r;
    float g;
    float b;
    float a;
} FluxUIColor;
typedef struct FluxUIRect {
    float x;
    float y;
    float w;
    float h;
} FluxUIRect;
// Tree mutation
FLUXUI_API void fluxui_widget_clear_children(FluxUIWidget* widget);
FLUXUI_API void fluxui_widget_reserve_children(FluxUIWidget* widget, uint32_t count);
FLUXUI_API FluxUIWidget* fluxui_widget_add_element(FluxUIWidget* parent,
                                                   const char* tag_name,
                                                   const char* text,
                                                   const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_panel(FluxUIWidget* parent, const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_form(FluxUIWidget* parent, const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_fieldset(FluxUIWidget* parent, const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_text(FluxUIWidget* parent,
                                                const char* text,
                                                const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_label(FluxUIWidget* parent,
                                                 const char* text,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_legend(FluxUIWidget* parent,
                                                  const char* text,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_button(FluxUIWidget* parent,
                                                  const char* label,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_text_input(FluxUIWidget* parent,
                                                      const char* placeholder,
                                                      const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_input(FluxUIWidget* parent,
                                                 const char* input_type,
                                                 const char* placeholder,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_password_input(FluxUIWidget* parent,
                                                          const char* placeholder,
                                                          const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_textarea(FluxUIWidget* parent,
                                                    const char* placeholder,
                                                    const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_checkbox(FluxUIWidget* parent,
                                                    int checked,
                                                    const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_radio(FluxUIWidget* parent,
                                                 int checked,
                                                 const char* group,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_range(FluxUIWidget* parent,
                                                 float value,
                                                 float min,
                                                 float max,
                                                 float step,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_select(FluxUIWidget* parent,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_option(FluxUIWidget* parent,
                                                  const char* label,
                                                  const char* value,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_anchor(FluxUIWidget* parent,
                                                  const char* text,
                                                  const char* href,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_details(FluxUIWidget* parent,
                                                   const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_summary(FluxUIWidget* parent,
                                                   const char* text,
                                                   const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_dialog(FluxUIWidget* parent,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_meter(FluxUIWidget* parent,
                                                 float value,
                                                 float min,
                                                 float max,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_progress_element(FluxUIWidget* parent,
                                                           float value,
                                                           float max,
                                                           const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_hr(FluxUIWidget* parent,
                                              const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_br(FluxUIWidget* parent,
                                              const char* class_name);
// Canvas 2D Drawing Primitives (usable inside draw callback)
FLUXUI_API void fluxui_draw_rect(void* renderer_ptr, FluxUIRect rect, FluxUIColor color);
FLUXUI_API void fluxui_draw_text(void* renderer_ptr, const char* text, float x, float y, FluxUIColor color, float font_size);
FLUXUI_API void fluxui_draw_image(void* renderer_ptr, const char* name_or_path, FluxUIRect rect, float opacity);
FLUXUI_API void fluxui_renderer_flush(void* renderer_ptr);
// Widget state
FLUXUI_API void fluxui_widget_set_id(FluxUIWidget* widget, const char* id);
FLUXUI_API void fluxui_widget_set_class(FluxUIWidget* widget, const char* class_name);
FLUXUI_API void fluxui_widget_set_visible(FluxUIWidget* widget, int visible);
FLUXUI_API FluxUIRect fluxui_widget_get_bounds(FluxUIWidget* widget);
FLUXUI_API void fluxui_text_input_set_placeholder(FluxUIWidget* widget, const char* placeholder);
FLUXUI_API void fluxui_text_input_set_type(FluxUIWidget* widget, const char* input_type);
FLUXUI_API void fluxui_checkbox_set_checked(FluxUIWidget* widget, int checked);
FLUXUI_API int fluxui_checkbox_get_checked(FluxUIWidget* widget);
FLUXUI_API void fluxui_radio_set_checked(FluxUIWidget* widget, int checked);
FLUXUI_API int fluxui_radio_get_checked(FluxUIWidget* widget);
FLUXUI_API void fluxui_range_set_value(FluxUIWidget* widget, float value);
FLUXUI_API float fluxui_range_get_value(FluxUIWidget* widget);
FLUXUI_API void fluxui_select_set_selected_index(FluxUIWidget* widget, uint32_t index);
FLUXUI_API uint32_t fluxui_select_get_selected_index(FluxUIWidget* widget);
FLUXUI_API void fluxui_details_set_open(FluxUIWidget* widget, int open);
FLUXUI_API int fluxui_details_get_open(FluxUIWidget* widget);
FLUXUI_API void fluxui_dialog_show(FluxUIWidget* widget);
FLUXUI_API void fluxui_dialog_show_modal(FluxUIWidget* widget);
FLUXUI_API void fluxui_dialog_close(FluxUIWidget* widget);
FLUXUI_API int fluxui_dialog_get_open(FluxUIWidget* widget);
FLUXUI_API void fluxui_meter_set_value(FluxUIWidget* widget, float value);
FLUXUI_API float fluxui_meter_get_value(FluxUIWidget* widget);
FLUXUI_API void fluxui_progress_element_set_value(FluxUIWidget* widget, float value);
FLUXUI_API float fluxui_progress_element_get_value(FluxUIWidget* widget);
FLUXUI_API void fluxui_icon_set_glyph(FluxUIWidget* widget, const char* glyph);
FLUXUI_API void fluxui_progress_bar_set_value(FluxUIWidget* widget, float progress);
FLUXUI_API void fluxui_progress_bar_set_color(FluxUIWidget* widget, FluxUIColor color);
// Inline style helpers. Loading CSS and assigning classes is preferred for larger UIs.
FLUXUI_API FluxUIColor fluxui_color_rgba(float r, float g, float b, float a);
FLUXUI_API FluxUIColor fluxui_color_rgb_u8(uint8_t r, uint8_t g, uint8_t b);
FLUXUI_API void fluxui_style_width_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_height_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_min_width_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_min_height_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_max_width_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_max_height_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_flex_grow(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_gap_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_padding_all_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_padding_px(FluxUIWidget* widget,
                                        float top,
                                        float right,
                                        float bottom,
                                        float left);
FLUXUI_API void fluxui_style_margin_all_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_margin_px(FluxUIWidget* widget,
                                       float top,
                                       float right,
                                       float bottom,
                                       float left);
FLUXUI_API void fluxui_style_border_radius_px(FluxUIWidget* widget, float value);
FLUXUI_API void fluxui_style_background_color(FluxUIWidget* widget, FluxUIColor color);
FLUXUI_API void fluxui_style_text_color(FluxUIWidget* widget, FluxUIColor color);
// Apply a CSS declaration block inline (e.g. "display:flex;flex-direction:column").
// Mirrors Widget::css() so language bindings can express arbitrary inline styles.
FLUXUI_API void fluxui_widget_css(FluxUIWidget* widget, const char* declarations);