fluxui/include/fluxui/widgets.h

class Widget;
enum class EventPhase {
    None = 0,
    Capture = 1,
    AtTarget = 2,
    Bubble = 3
};
enum class TextInputType {
    Text,
    Password,
    Search,
    Email,
    Url,
    Tel,
    Number,
    Hidden,
    Button,
    Submit,
    Reset,
    File,
    Color,
    Date,
    Time,
    Month,
    Week,
    DateTimeLocal,
    Image
};
inline Text* Widget::text(const std::string& content, const std::string& cls) {
    return add<Text>(content, cls);
}
inline Text* Widget::b(const std::string& content, const std::string& cls) {
    auto* widget = text(content, cls);
    widget->type = "b";
    return widget;
}
inline Text* Widget::label(const std::string& content, const std::string& cls) {
    auto* widget = text(content, cls);
    widget->type = "label";
    return widget;
}
inline Anchor* Widget::a(const std::string& content, const std::string& href, const std::string& cls) {
    return anchor(content, href, cls);
}