bindings/python/fluxui.py


_lib.fluxui_text_input_set_placeholder.restype = None
_lib.fluxui_text_input_set_placeholder.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_text_input_set_type.restype = None
_lib.fluxui_text_input_set_type.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_checkbox_set_checked.restype = None
_lib.fluxui_checkbox_set_checked.argtypes = [ctypes.c_void_p, ctypes.c_int]

_lib.fluxui_checkbox_get_checked.restype = ctypes.c_int
_lib.fluxui_checkbox_get_checked.argtypes = [ctypes.c_void_p]

_lib.fluxui_radio_set_checked.restype = None
_lib.fluxui_radio_set_checked.argtypes = [ctypes.c_void_p, ctypes.c_int]

_lib.fluxui_radio_get_checked.restype = ctypes.c_int
_lib.fluxui_radio_get_checked.argtypes = [ctypes.c_void_p]

_lib.fluxui_range_set_value.restype = None
_lib.fluxui_range_set_value.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_range_get_value.restype = ctypes.c_float
_lib.fluxui_range_get_value.argtypes = [ctypes.c_void_p]

_lib.fluxui_select_set_selected_index.restype = None
_lib.fluxui_select_set_selected_index.argtypes = [ctypes.c_void_p, ctypes.c_uint32]

_lib.fluxui_select_get_selected_index.restype = ctypes.c_uint32
_lib.fluxui_select_get_selected_index.argtypes = [ctypes.c_void_p]

_lib.fluxui_details_set_open.restype = None
_lib.fluxui_details_set_open.argtypes = [ctypes.c_void_p, ctypes.c_int]

_lib.fluxui_details_get_open.restype = ctypes.c_int
_lib.fluxui_details_get_open.argtypes = [ctypes.c_void_p]

_lib.fluxui_dialog_show.restype = None
_lib.fluxui_dialog_show.argtypes = [ctypes.c_void_p]

_lib.fluxui_dialog_show_modal.restype = None
_lib.fluxui_dialog_show_modal.argtypes = [ctypes.c_void_p]

_lib.fluxui_dialog_close.restype = None
_lib.fluxui_dialog_close.argtypes = [ctypes.c_void_p]

_lib.fluxui_dialog_get_open.restype = ctypes.c_int
_lib.fluxui_dialog_get_open.argtypes = [ctypes.c_void_p]

_lib.fluxui_meter_set_value.restype = None
_lib.fluxui_meter_set_value.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_meter_get_value.restype = ctypes.c_float
_lib.fluxui_meter_get_value.argtypes = [ctypes.c_void_p]

_lib.fluxui_progress_element_set_value.restype = None
_lib.fluxui_progress_element_set_value.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_progress_element_get_value.restype = ctypes.c_float
_lib.fluxui_progress_element_get_value.argtypes = [ctypes.c_void_p]

_lib.fluxui_icon_set_glyph.restype = None
_lib.fluxui_icon_set_glyph.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_progress_bar_set_value.restype = None
_lib.fluxui_progress_bar_set_value.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_progress_bar_set_color.restype = None
_lib.fluxui_progress_bar_set_color.argtypes = [ctypes.c_void_p, FluxUIColor]

# Style helpers
_lib.fluxui_color_rgba.restype = FluxUIColor
_lib.fluxui_color_rgba.argtypes = [ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]

_lib.fluxui_color_rgb_u8.restype = FluxUIColor
_lib.fluxui_color_rgb_u8.argtypes = [ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8]

_lib.fluxui_style_width_px.restype = None
_lib.fluxui_style_width_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_height_px.restype = None
_lib.fluxui_style_height_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_min_width_px.restype = None
_lib.fluxui_style_min_width_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_min_height_px.restype = None
_lib.fluxui_style_min_height_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_max_width_px.restype = None
_lib.fluxui_style_max_width_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_max_height_px.restype = None
_lib.fluxui_style_max_height_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_flex_grow.restype = None
_lib.fluxui_style_flex_grow.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_gap_px.restype = None
_lib.fluxui_style_gap_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_padding_all_px.restype = None
_lib.fluxui_style_padding_all_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_padding_px.restype = None
_lib.fluxui_style_padding_px.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]

_lib.fluxui_style_margin_all_px.restype = None
_lib.fluxui_style_margin_all_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_margin_px.restype = None
_lib.fluxui_style_margin_px.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]

_lib.fluxui_style_border_radius_px.restype = None
_lib.fluxui_style_border_radius_px.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_style_background_color.restype = None
_lib.fluxui_style_background_color.argtypes = [ctypes.c_void_p, FluxUIColor]

_lib.fluxui_style_text_color.restype = None
_lib.fluxui_style_text_color.argtypes = [ctypes.c_void_p, FluxUIColor]

_lib.fluxui_widget_css.restype = None
_lib.fluxui_widget_css.argtypes = [ctypes.c_void_p, ctypes.c_char_p]


class Renderer:
    def __init__(self, handle):
        self.handle = handle

    def draw_rect(self, x, y, w, h, r, g, b, a=1.0):
        rect = FluxUIRect(x, y, w, h)
        color = FluxUIColor(r, g, b, a)
        _lib.fluxui_draw_rect(self.handle, rect, color)

    def draw_text(self, text, x, y, r, g, b, a=1.0, font_size=14.0):
        color = FluxUIColor(r, g, b, a)
        _lib.fluxui_draw_text(self.handle, text.encode('utf-8'), float(x), float(y), color, float(font_size))

    def draw_image(self, name_or_path, x, y, w, h, opacity=1.0):
        rect = FluxUIRect(x, y, w, h)
        _lib.fluxui_draw_image(self.handle, name_or_path.encode('utf-8'), rect, float(opacity))

    def flush(self):
        _lib.fluxui_renderer_flush(self.handle)


class Widget:
    def __init__(self, handle):
        self.handle = handle
        self._click_cb = None
        self._draw_cb = None
        self._list_item_cb = None

    def clear_children(self):
        _lib.fluxui_widget_clear_children(self.handle)

    def reserve_children(self, count):
        _lib.fluxui_widget_reserve_children(self.handle, int(count))

    def set_id(self, widget_id):
        _lib.fluxui_widget_set_id(self.handle, widget_id.encode('utf-8'))

    def set_class(self, class_name):
        _lib.fluxui_widget_set_class(self.handle, class_name.encode('utf-8'))

    def set_visible(self, visible):
        _lib.fluxui_widget_set_visible(self.handle, 1 if visible else 0)

    def get_bounds(self):
        bounds = _lib.fluxui_widget_get_bounds(self.handle)
        return (bounds.x, bounds.y, bounds.w, bounds.h)

    # Tag additions
    def add_element(self, tag_name, text="", class_name=""):
        res = _lib.fluxui_widget_add_element(self.handle, tag_name.encode('utf-8'), text.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_panel(self, class_name=""):
        res = _lib.fluxui_widget_add_panel(self.handle, class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_form(self, class_name=""):
        res = _lib.fluxui_widget_add_form(self.handle, class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_fieldset(self, class_name=""):
        res = _lib.fluxui_widget_add_fieldset(self.handle, class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_text(self, text, class_name=""):
        res = _lib.fluxui_widget_add_text(self.handle, text.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_label(self, text, class_name=""):
        res = _lib.fluxui_widget_add_label(self.handle, text.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_legend(self, text, class_name=""):
        res = _lib.fluxui_widget_add_legend(self.handle, text.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_button(self, label, class_name=""):
        res = _lib.fluxui_widget_add_button(self.handle, label.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_text_input(self, placeholder="", class_name=""):
        res = _lib.fluxui_widget_add_text_input(self.handle, placeholder.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_input(self, input_type, placeholder="", class_name=""):
        res = _lib.fluxui_widget_add_input(self.handle, input_type.encode('utf-8'), placeholder.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_password_input(self, placeholder="", class_name=""):
        res = _lib.fluxui_widget_add_password_input(self.handle, placeholder.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_textarea(self, placeholder="", class_name=""):
        res = _lib.fluxui_widget_add_textarea(self.handle, placeholder.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_checkbox(self, checked=False, class_name=""):
        res = _lib.fluxui_widget_add_checkbox(self.handle, 1 if checked else 0, class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_radio(self, checked=False, group="", class_name=""):
        res = _lib.fluxui_widget_add_radio(self.handle, 1 if checked else 0, group.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_range(self, value=0.0, min_val=0.0, max_val=100.0, step=1.0, class_name=""):
        res = _lib.fluxui_widget_add_range(self.handle, float(value), float(min_val), float(max_val), float(step), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_select(self, class_name=""):
        res = _lib.fluxui_widget_add_select(self.handle, class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_option(self, label, value, class_name=""):
        res = _lib.fluxui_widget_add_option(self.handle, label.encode('utf-8'), value.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_anchor(self, text, href, class_name=""):
        res = _lib.fluxui_widget_add_anchor(self.handle, text.encode('utf-8'), href.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_details(self, class_name=""):
        res = _lib.fluxui_widget_add_details(self.handle, class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_summary(self, text, class_name=""):
        res = _lib.fluxui_widget_add_summary(self.handle, text.encode('utf-8'), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_dialog(self, class_name=""):
        res = _lib.fluxui_widget_add_dialog(self.handle, class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_meter(self, value, min_val=0.0, max_val=100.0, class_name=""):
        res = _lib.fluxui_widget_add_meter(self.handle, float(value), float(min_val), float(max_val), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_progress_element(self, value, max_val=100.0, class_name=""):
        res = _lib.fluxui_widget_add_progress_element(self.handle, float(value), float(max_val), class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_hr(self, class_name=""):
        res = _lib.fluxui_widget_add_hr(self.handle, class_name.encode('utf-8'))
        return Widget(res) if res else None

    def add_br(self, class_name=""):
        res = _lib.fluxui_widget_add_br(self.handle, class_name.encode('utf-8'))
        return Widget(res) if res else None
